--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
-<!-- Write your code below -->
+<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Portfolio Website</title>
+    </head>
+    <body>
+        <h1>Dariusz Wacnik's Portfolio</h1>
+        <h2>I am a front-end web developer</h2>
+        <hr>
+        <h3><a href="./public/movie-ranking.html">Movie ranking project</a> </h3>
+        <img src="./assets/images/movie-ranking1.png" width="300">
 
-<h1>The best movies according to Darek</h1>
-<h2>My top three movies of all-time</h2>
-<hr>
-<h3>Into The Wild</h3>
-<p>This is the movie that changed how I think about life and initiated 
-    <br>my desire to experience nature and connect with it
-    <hr size="2" color="green" width="250">
-    <br>I found so much beauty
-    <hr size="1" color="green" width="400">
-    <br>All of the things I've seen and all the nature I saw, this feeling
-    <br> of belonging, feeling like being one with nature in that exact moment
-    <br>  </p>
-<h3>Matrix</h3>
-<p>To me this is a movie that should be mandatory at certain age. The idea expressed there <br> made me question reality or at least how
-perceive it</p>
-<h3>Cloud Atlas</h3>
-<p>Beautifully expressed the idea of reincarnation and how complex it can be</p>
+        <h3><a href="./public/birthday-invite.html">Birthday invite project</a> </h3>
+        <img src="./assets/images/bday.png" width="300">
+        <hr>
+        <a href="./public/about.html">About me</a>
+        <a href="./public/contact.html">Contact me</a>
+    </body>
+</html>
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
